Remove style to avoid issues with buttons overlapping and not working. Main focus is to add functionality so user can choose the length of their password

--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     margin: 0px;
     padding: 0px;
     min-height: 100vh;
@@ -38,8 +38,8 @@ input {
     background-color: #273549;
     border: 1px solid #273549;
 }
-
-/*typography*/
+*/
+/*typography
 h1 {
     font-style: normal;
     font-weight: 800;
@@ -72,8 +72,8 @@ p {
     font-size: 16px;
     text-align: center;
 }
-
-/*container sizing and spacing*/
+*/
+/*container sizing and spacing
 .informational-content {
     width: 480px;
     height: 290px;
@@ -92,8 +92,8 @@ p {
     align-items: center;
     padding-top: 39px;
 }
-
-/*buttons*/
+*/
+/*buttons
 #generator-btn {
     width: 190px;
     height: 40px;
@@ -110,8 +110,8 @@ p {
     height: 43px;
     border-radius: 4px;
 }
-
-/*footer*/
+*/
+/*footer
 
 footer {
     color: #D5D4D8;
@@ -124,3 +124,4 @@ footer {
  a {
     color: #D5D4D8;
  }
+ */
